# Robotic_arm

./: .gitignore  README.md
Robotic_arm_urdf/: CMakeLists.txt  package.xml
Robotic_arm_urdf/launch/: display.launch  gazebo.launch
Robotic_arm_urdf/meshes/: arm1_link.STL  base_Link.STL  base_link.STL
Robotic_arm_urdf/urdf/: Robotic_arm_urdf.csv  Robotic_arm_urdf.urdf
Robotic_arm_urdf_v2/: CMakeLists.txt  package.xml
Robotic_arm_urdf_v2/config/: joint_names_Robotic_arm_urdf_v2.yaml
Robotic_arm_urdf_v2/launch/: display.launch  gazebo.launch
Robotic_arm_urdf_v2/meshes/: arm2_Link.STL
arduino_code/: sample_code.ino
robotic_arm_ws/: .gitignore
robotic_arm_ws/src/robotic_arm/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm/launch/: view_robot.launch.py
robotic_arm_ws/src/robotic_arm/meshes/: arm1_Link.STL  arm2_link.STL  gripperSup_link.STL  leftClaw_Link.STL  leftClaw_link.STL  rightClaw_Link.STL  rightClaw_link.STL
robotic_arm_ws/src/robotic_arm/urdf/: Robotic_arm_urdf.urdf  Robotic_arm_urdf_v2.csv  Robotic_arm_urdf_v2.urdf
robotic_arm_ws/src/robotic_arm_bringup/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_bringup/launch/: physical_robot.launch.py  simulated_robot.launch.py
robotic_arm_ws/src/robotic_arm_controllers/: CMakeLists.txt  package.xml  robotic_arm_controller.xml
robotic_arm_ws/src/robotic_arm_controllers/config/: robotic_arm_controllers.yaml
robotic_arm_ws/src/robotic_arm_controllers/include/robotic_arm_controllers/: robotic_arm_interface.hpp
robotic_arm_ws/src/robotic_arm_controllers/launch/: controller.launch.py
robotic_arm_ws/src/robotic_arm_controllers/src/: robotic_arm_interface.cpp
robotic_arm_ws/src/robotic_arm_description/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_description/launch/: gazebo.launch.py  view_robot.launch.py
robotic_arm_ws/src/robotic_arm_description/meshes/: arm2_Link.STL  bicep_Link.STL  rightClaw_Link.STL
robotic_arm_ws/src/robotic_arm_description/rviz/: view_robot.rviz
robotic_arm_ws/src/robotic_arm_description/urdf/: Robotic_arm.urdf.xacro  Robotic_arm_urdf.urdf  robotic_arm.urdf.xacro  robotic_arm_gazebo.xacro  robotic_arm_ros2_control.xacro
robotic_arm_ws/src/robotic_arm_firmware/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_firmware/arduino_firmware/robot_control/: robot_control.ino
robotic_arm_ws/src/robotic_arm_firmware/arduino_firmware/sample_serial_transmitter/: sample_serial_transmitter.ino
robotic_arm_ws/src/robotic_arm_firmware/arduino_firmware/sample_servo_control/: sample_servo_control.ino
robotic_arm_ws/src/robotic_arm_firmware/arduino_firmware/serial_read_sample/: serial_read_sample.ino
robotic_arm_ws/src/robotic_arm_firmware/arduino_firmware/test_code/: sampleCode.ino
robotic_arm_ws/src/robotic_arm_firmware/src/: sample_serial_receiver.cpp  sample_serial_transmitter.cpp
robotic_arm_ws/src/robotic_arm_moveit/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  robotic_arm.srdf
robotic_arm_ws/src/robotic_arm_moveit/launch/: moveit.launch.py
robotic_arm_ws/src/robotic_arm_msgs/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_msgs/action/: Fibonacci.action  RoboticArmTask.action
robotic_arm_ws/src/robotic_arm_msgs/srv/: AddTwoInts.srv  EulerToQuaternion.srv  QuaternionToEuler.srv
robotic_arm_ws/src/robotic_arm_remote/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_remote/launch/: remote_interface.launch.py
robotic_arm_ws/src/robotic_arm_remote/robotic_arm_remote/: alexa_interface.py
robotic_arm_ws/src/robotic_arm_remote/src/: task_server.cpp  task_servo.cpp
robotic_arm_ws/src/robotic_arm_utils/: CMakeLists.txt  package.xml
robotic_arm_ws/src/robotic_arm_utils/src/: angle_conversion.cpp
robotic_arm_ws/src/sample_cpp/: CMakeLists.txt  package.xml
robotic_arm_ws/src/sample_cpp/src/: sample_action_client.cpp  sample_action_server.cpp  sample_lifecycle_node.cpp  sample_moveit_interface.cpp  sample_parameter.cpp  sample_publisher.cpp  sample_service_client.cpp  sample_service_server.cpp  sample_subscriber.cpp
robotic_arm_ws/src/sample_pkg/sample_cpp/src/main_pkg/: empty.cpp
robotic_arm_ws/src/sample_pkg/sample_cpp/src/sample_pkg/: sample_publisher.cpp
